Wed Sep  4 20:46:47 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c:
	- return CS_ROW_FAIL if error converting

Wed Sep  4 05:43:26 EDT 20002 Brian Bruns <camber@ais.org>
	* src/tds/read.c: return -1 from tds_read_packet to be unambigious

Tue Sep  3 20:35:49 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* doc/userguide.sgml:
	- Applied patch #604084 from Brian with various corrections.
	- A few more corrections of my own
	- Document the --enable-sybase-compat configure flag.

Tue Sep  3 14:49:54 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/login.c: small optimization (full tested)

Mon Sep  2 15:25:12 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* Makefile.am src/dblib/unittests/Makefile.am:
	- fixed distcheck copying needed file if they not exists in 
	  destination directory

Sun Sep  1 19:56:43 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* .cvsignore:
	- ignore generated file ltcf-c.sh
	* configure.in:
	- Print out result of threadsafety checks

Sun Sep  1 11:53:01 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/cs.c:
	- fixed small problem for previous implicit conversion
	* src/tds/convert.c:
	- added conversion from and to binary/image

Sun Sep  1 09:10:31 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c src/dblib/unittests/t0019.c:
	- return and trimming compatible with sybase (test added)
	- allow destlen < 0 for binary (copy all buffer and not padding) 
	* src/tds/convert.c src/tds/unittests/t0007.c:
	- add conversion to numeric (any -> char -> numeric for now)
	- fixed conversion from bit to money
	- moved rtrim before to allocate less memory (in char -> binary)
	- fixed conversion from char to binary if odd length string (added test)

Sat Aug 31 16:27:52 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/apps/freebcp.c:
	- use dbfcmd() instead of dbcmd() to eliminate potential buffer
	  overrun. 

Sat Aug 31 08:31:25 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>