@@ -221,5 +221,6 @@ AC_OUTPUT(include/tdsver.h include/tds.h \
 	src/server/Makefile \
 	src/pool/Makefile \
 	src/odbc/Makefile \
+	src/odbc/unittests/Makefile \
 	src/apps/Makefile 
 )
